--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
 spring.datasource.url= jdbc:postgresql://localhost:5432/SeedOnTanda
 spring.datasource.username= amigoscode
 spring.datasource.password= password
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQL92Dialect
 server.error.include-message=always
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+
+spring.flyway.url=jdbc:postgresql://localhost:5432/SeedOnTanda
+#spring.flyway.schemas=public
+spring.flyway.user=amigoscode
+spring.flyway.password=password
+spring.flyway.baseline-on-migrate=true
+spring.flyway.baseline-version=1
+spring.flyway.baseline-description=database
