--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,16 @@
-spring.datasource.url= jdbc:postgresql://localhost:5432/SeedOnTanda
-spring.datasource.username= amigoscode
-spring.datasource.password= password
+spring.datasource.url= ${SPRING_DATASOURCE_URL:jdbc:postgresql://localhost:5432/SeedOnTanda}
+spring.datasource.username= ${SPRING_DATASOURCE_USERNAME:amigoscode}
+spring.datasource.password= ${SPRING_DATASOURCE_PASSWORD:password}
 spring.jpa.hibernate.ddl-auto=validate
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQL92Dialect
 server.error.include-message=always
 
-spring.flyway.url=jdbc:postgresql://localhost:5432/SeedOnTanda
+spring.flyway.url=${SPRING_FLYWAY_URL:jdbc:postgresql://localhost:5432/SeedOnTanda}
 #spring.flyway.schemas=public
-spring.flyway.user=amigoscode
-spring.flyway.password=password
+spring.flyway.user=${SPRING_FLYWAY_USER:amigoscode}
+spring.flyway.password=${SPRING_FLYWAY_PASSWORD:password}
 spring.flyway.baseline-on-migrate=true
 spring.flyway.baseline-version=1
 spring.flyway.baseline-description=database
 
-spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_SERVER:localhost:29092}
