--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,5 @@ seedon.external.config.auth.auth-validate=${AUTH_VALIDATE:/v1/auth/session}
 spring.servlet.multipart.max-file-size=2MB
 spring.servlet.multipart.max-request-size=2MB
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
+seedon.external.config.storage.base-url=${STORAGE_BASE_URL:http:localhost:8080/api/v1/files/}
+seedon.external.config.storage.file-path=${STORAGE_PATH_URL:/api/v1/files/}
